# CubeShuffle

./: Cargo.toml  README.adoc  cubeshuffle.keystore  requirements.txt
.github/workflows/: build.yml
cube_shuffle-wasm/: Cargo.toml
cube_shuffle-wasm/src/: config.rs  main.rs
cube_shuffle-wasm/src/components/: add_pile.rs  app.rs  pack_card.rs  pack_list.rs
docs/installation/: android.adoc  desktop.adoc
src-tauri2/: .gitignore  Cargo.toml  README.md  build-frontend.cmd  build-frontend.sh  tauri.conf.json  tauri.windows.conf.json
src-tauri2/src/: lib.rs  main.rs
